--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
   background: white;
   margin-top: 30px;
   border-radius: 5px;
+  text-align: center;
 }
 .rightconteiner {
   width: calc(60% - 50px);
@@ -97,5 +98,9 @@ body {
   padding: 20px;
   color: white;
   border-radius: 4px
+
+}
+.socialitem {
+  display: inline-block;
 
 }
