--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
 
 }
 .wrapper {
+  width: 100%
+}
+.wrapper::after {
   display: table;
   clear: both;
   content: ''
@@ -63,8 +66,9 @@ body {
   height: 250px;
   background: red;
   border-radius: 5px;
-  top: 0;
-  left: 0;
+  margin-top: 25px;
+
+
 
 
 
@@ -100,7 +104,21 @@ body {
   border-radius: 4px
 
 }
+.social a, i {
+  text-decoration: none;
+  color: #EBEBEB
+}
+
 .socialitem {
   display: inline-block;
+  padding: 30px;
+
+}
+.social li {
+  margin: 50px 0;
+}
+.social i:hover {
+  color: #c61414;
+
 
 }
