--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   color:  #7d7d7d;
-/*   font-size: 15px;
- */
+
 }
 body {
   background: #EBEBEB;
@@ -59,6 +58,8 @@ body {
   background: white;
   margin-left: 50px;
   border-radius: 5px;
+  padding: 40px 40px;
+
 
 }
  .about {
@@ -94,17 +95,18 @@ body {
 }
 .boris p {
   text-align: justify;
-  padding: 20px;
+  padding: 10px;
 }
 .boris a {
   text-decoration: none;
   background: #DD5555;
   padding: 20px;
   color: white;
-  border-radius: 4px
+  border-radius: 4px;
+
 
 }
-.social a, i {
+.social a, i:hover {
   text-decoration: none;
   color: #EBEBEB
 }
@@ -120,5 +122,36 @@ body {
 .social i:hover {
   color: #c61414;
 
+}
+.social a:hover {
+  color: #c61414;
 
 }
+.rightconteiner h2 {
+  font-size: 20px;
+  font-weight: 300;
+
+}
+.line {
+  width: 100%;
+  height: 100px;
+  background: green;
+  margin: 80px 0;
+}
+.image {
+  width: 30%;
+  height: 150px;
+  background: white;
+  float: left;
+}
+.textdescription {
+  float: left;
+  width: 70%;
+  height: 150px;
+  background: white;
+  padding: 10px 0;
+}
+.image img {
+  height: 150px;
+}
+.tex
