--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   color:  #7d7d7d;
+  font-weight: 300
 
 }
 body {
@@ -65,9 +66,9 @@ body {
  .about {
   width: 100%;
   height: 250px;
-  background: red;
   border-radius: 5px;
   margin-top: 25px;
+  background: white;
 
 
 
@@ -153,5 +154,31 @@ body {
 }
 .image img {
   height: 150px;
+
 }
-.tex
+.aboutleft {
+  width: 60%;
+  height: 250px;
+  float: left;
+
+}
+.aboutright {
+  width: 40%;
+  height: 250px;
+  background: pink;
+  float: left;
+}
+.aboutleft h2 {
+  font-size: 20px;
+  padding: 20px 30px;
+}
+.aboutleft p {
+  padding: 0px 30px;
+}
+.aboutleft a {
+  text-decoration: none;
+}
+.aboutleft a:hover
+{
+  color: #DD5555
+}
